labs/traffic-management/envoy-resilience/k8s/base/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: order-envoy-config
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: payment_egress
          address:
            socket_address: { address: 0.0.0.0, port_value: 10000 }
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: payment_egress
                    route_config:
                      name: payment_route
                      virtual_hosts:
                        - name: payment
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/" }
                              route:
                                cluster: payment
                                timeout: 0.300s
                                retry_policy:
                                  retry_on: "5xx,connect-failure,reset"
                                  num_retries: 1
                                  per_try_timeout: 0.150s
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    access_log:
                      - name: envoy.access_loggers.stdout
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
      clusters:
        - name: payment
          connect_timeout: 0.100s
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: payment
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address: { address: payment-api, port_value: 8080 }
          circuit_breakers:
            thresholds:
              - priority: DEFAULT
                max_connections: 5
                max_pending_requests: 2
                max_requests: 3
                max_retries: 1
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
